# hackaton-23-ai-assistant

./: Dockerfile  main.py  pyproject.toml
hackathon-23-ai-assistant/: config.py  main.py
hackathon-23-ai-assistant/handlers/: __init__.py
hackathon-23-ai-assistant/utils/: fhir.py
hackathon_ai_assistant/: app.py  main.py
hackathon_ai_assistant/handlers/: __init__.py
hackathon_ai_assistant/tests/: test_utils.py
hackathon_ai_assistant/utils/: __init__.py  fhir.py
