[tool.poetry]
name = "hackathon-23-ai-assistant"
version = "0.1.0"
description = "AI assistant which helps to generate Questionnaire resources from unstructure text data"
authors = ["Beda Software"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.5.0"
aiohttp = "^3.9.1"
gunicorn = "^21.2.0"
aiofiles = "^23.2.1"
aiohttp-cors = "^0.7.0"
fhirpy = "^1.4.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
black = "^23.12.0"
autohooks = "^23.10.0"
autohooks-plugin-black = "^23.10.0"
autohooks-plugin-ruff = "^23.11.0"
mypy = "^1.7.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autohooks]
mode = "poetry"
pre-commit = [
    "autohooks.plugins.black",
    "autohooks.plugins.ruff",
]

[[tool.mypy.overrides]]
module = ["aiohttp_cors"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-rA --disable-warnings --color=yes --log-level=INFO"
testpaths = ["hackathon-ai-assistant/tests"]
log_level="ERROR"